manifets/axion-ui-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: axion-ui-service

spec:
  type: ClusterIP

  selector:
    app: axion-ui

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
