manifets/axion-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: axion-ui-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: hotfix.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: axion-ui-service
                port:
                  number: 80
